[package]
name = "solana-token-swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.10.39"
spl-token = "3.3.0"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_token_swap"